SERVER-18524: Different parsing for RLP index keys and queries leads to missing results